test/cli/escaping/escaping.out
test/cli/escaping/escaping.rb:9: `String("\n")` doesn't match `Integer` for argument `a` https://sorbet.org/docs/error-reference#7002
     9 |foo( #error: `String("\n")` doesn't match
    10 |'
    11 |'
    12 |)
    test/cli/escaping/escaping.rb:4: Method `Object#foo` has specified `a` as `Integer`
     4 |sig{params(a: Integer).void}
                   ^
  Got String("\n") originating from:
    test/cli/escaping/escaping.rb:10:
    10 |'
    11 |'
Errors: 1
